--- a/emacs.org
+++ b/emacs.org
@@ -944,15 +944,19 @@ We want to be able to edit CMake files in a sane way.
     :ensure t
     :pin melpa-stable
     :commands magit-status
-    :init (progn
-            (when (ck/is-osx)
-              (setq magit-git-executable "/usr/local/bin/git")
-              (setq magit-emacsclient-executable "/usr/local/bin/emacsclient")))
-    :config (progn
-              (add-to-list 'magit-no-confirm 'stage-all-changes)
-              (add-to-list 'magit-no-confirm 'unstage-all-changes)
-              (setq magit-save-repository-buffers nil
-                    magit-last-seen-setup-instructions "2.1.0")))
+    :init
+    (when (ck/is-osx)
+      (setq magit-git-executable "/usr/local/bin/git")
+      (setq magit-emacsclient-executable "/usr/local/bin/emacsclient"))
+    :config
+    (add-to-list 'magit-no-confirm 'stage-all-changes)
+    (add-to-list 'magit-no-confirm 'unstage-all-changes)
+    (setq magit-save-repository-buffers nil
+          magit-last-seen-setup-instructions "2.1.0"))
+
+  (use-package git-timemachine
+    :ensure t
+    :commands git-timemachine)
 #+end_src
 
 ** markdown support
@@ -1438,7 +1442,7 @@ When using OS X, the =ls= doesn't support =--dired=
           ("G" rgrep "rgrep")
           ("h" man "man")
           ("s" eshell-here "eshell")
-          ("t" proced "proced")
+          ("t" git-timemachine "git timemachine")
           ("a" magit-status "magit-status")
           ("p" sql-postgres "sql-postgres")
           ("." ck-put-file-name-wo-path-on-clipboard "copy filename to clipboard")
@@ -1454,7 +1458,7 @@ When using OS X, the =ls= doesn't support =--dired=
         ("G" rgrep "rgrep")
         ("h" man "man")
         ("s" eshell-here "eshell")
-        ("t" proced "proced")
+        ("t" git-timemachine "git timemachine")
         ("a" magit-status "magit-status")
         ("p" sql-postgres "sql-postgres")
         ("m" mu4e "mu4e")
