ref: remove the buffer position from the space line

--- a/emacs.org
+++ b/emacs.org
@@ -1171,6 +1171,7 @@ We want to be able to edit CMake files in a sane way.
     (spaceline-toggle-input-method-off)
     (spaceline-toggle-which-function-on)
     (spaceline-toggle-hud-off)
+    (spaceline-toggle-buffer-position-off)
 
     (spaceline-helm-mode 1)
     (spaceline-emacs-theme 'circe-track))
