fix: auto-revert-mode gets autoloaded much later

--- a/emacs.org
+++ b/emacs.org
@@ -1960,6 +1960,8 @@ Pretty-print XML with =xmllint=
 
 #+begin_src emacs-lisp
   (add-hook 'after-init-hook '(lambda ()
+                                (eval-after-load 'auto-revert-mode
+                                  '(diminish 'auto-revert-mode))
                                 (diminish 'auto-revert-mode)
                                 (diminish 'company-mode "Ⓒ")
                                 (diminish 'ck/keys-minor-mode)))
