--- a/emacs.org
+++ b/emacs.org
@@ -1117,7 +1117,8 @@ We want to be able to edit CMake files in a sane way.
     :defer 0
     :diminish projectile-rails-mode
     :config
-    (projectile-rails-global-mode))
+    (projectile-rails-global-mode)
+    (define-key projectile-rails-mode-map (kbd "C-c c r") 'hydra-projectile-rails/body))
 #+end_src
 
 ** Rust support
