--- a/emacs.org
+++ b/emacs.org
@@ -1642,24 +1642,13 @@ When using OS X, the =ls= doesn't support =--dired=
           helm-autoresize-min-height 30)
 
     (helm-mode 1)
-
-    (setq helm-completing-read-handlers-alist '((describe-function . helm-completing-read-symbols)
-                                                (describe-variable . helm-completing-read-symbols)
-                                                (describe-symbol . helm-completing-read-symbols)
-                                                (debug-on-entry . helm-completing-read-symbols)
-                                                (find-function . helm-completing-read-symbols)
-                                                (disassemble . helm-completing-read-symbols)
-                                                (trace-function . helm-completing-read-symbols)
-                                                (trace-function-foreground . helm-completing-read-symbols)
-                                                (trace-function-background . helm-completing-read-symbols)
-                                                (find-tag . helm-completing-read-with-cands-in-buffer)
-                                                (ffap-alternate-file)
-                                                (tmm-menubar)))
-
     (helm-autoresize-mode t)
 
     (global-set-key (kbd "M-y") 'helm-show-kill-ring)
     (global-set-key (kbd "C-x b") 'helm-mini)
+    (global-set-key (kbd "M-x") #'helm-M-x)
+    (global-set-key (kbd "C-x r b") #'helm-filtered-bookmarks)
+    (global-set-key (kbd "C-x C-f") #'helm-find-files)
 
     (define-key helm-map (kbd "<tab>") 'helm-execute-persistent-action)
     (define-key helm-map (kbd "C-i") 'helm-execute-persistent-action)
