--- a/emacs.org
+++ b/emacs.org
@@ -930,12 +930,7 @@ We want to be able to edit CMake files in a sane way.
                               (name . "^\\*scratch\\*$")
                               (name . "^\\*Messages\\*$")
                               (name . "^\\*Help\\*$")
-                              (name . "^\\*Flycheck error messages\\*$")))
-                    ("Circe" (or
-                              (mode . circe-channel-mode)
-                              (mode . circe-query-mode)
-                              (mode . circe-mode)
-                              (mode . circe-server-mode))))))))
+                              (name . "^\\*Flycheck error messages\\*$"))))))))
 
     (add-hook 'ibuffer-mode-hook
               (lambda ()
@@ -1167,11 +1162,6 @@ We want to be able to edit CMake files in a sane way.
   (use-package spaceline-config
     :ensure spaceline
     :config
-    (spaceline-define-segment circe-track
-      "Show the circe buffers with new messages. Requires
-  `circe-track-mode' to be enabled."
-      (tracking-status))
-
     (when (ck/is-osx)
       (setq powerline-image-apple-rgb t))
 
@@ -1184,7 +1174,7 @@ We want to be able to edit CMake files in a sane way.
     (spaceline-toggle-buffer-position-off)
 
     (spaceline-helm-mode 1)
-    (spaceline-emacs-theme 'circe-track))
+    (spaceline-emacs-theme))
 #+end_src
 
 ** SQL
@@ -1881,75 +1871,6 @@ Pretty-print XML with =xmllint=
     (mu4e-alert-enable-mode-line-display)
     (spaceline-toggle-mu4e-alert-segment-on))
     ;; (add-hook 'message-send-mail-hook 'my-mu4e-set-msmtp-account)))
-#+end_src
-
-** Circe, IRC in Emacs
-
-#+begin_src emacs-lisp
-  (use-package circe
-    :ensure t
-    :defer 120
-    :commands circe tracking-status
-    :init
-    (defun ck/irc ()
-      (interactive)
-      (circe "EPD-ME")
-      (circe "Freenode"))
-
-    (load "~/dev/mail/znc.el")
-
-    :config
-
-    ; use things like pastebin for long pastes
-    (add-hook 'circe-channel-mode-hook 'enable-lui-autopaste)
-    (add-hook 'circe-channel-mode-hook 'turn-on-flyspell)
-
-    (enable-circe-color-nicks)
-
-    (defadvice circe-command-SAY (after jjf-circe-unignore-target)
-      (let ((ignored (tracking-ignored-p (current-buffer) nil)))
-        (when ignored
-          (setq tracking-ignored-buffers
-                (remove ignored tracking-ignored-buffers))
-          (message "This buffer will now be tracked."))))
-    (ad-activate 'circe-command-SAY)
-
-    (enable-circe-notifications)
-
-    (setq circe-default-nick "cjk101010"
-          circe-default-user "ckruse"
-          circe-default-realname "Christian Kruse"
-          circe-reduce-lurker-spam t
-          lui-time-stamp-format "%H:%M"
-          lui-fill-column 120
-
-          tracking-ignored-buffers '("#indieweb" "#erlang")
-
-          circe-network-options
-          `(("EPD-ME"
-             :host "cloud.defunct.ch"
-             :tls t
-             :nick "Christian"
-             :port "6660"
-             :pass ,epdme-password
-             )
-            ("Freenode"
-             :host "cloud.defunct.ch"
-             :tls t
-             :nick "cjk101010"
-             :port "6660"
-             :pass ,freenode-password
-             ))))
-
-  (use-package lui-autopaste
-    :ensure circe
-    :after circe
-    :commands enable-lui-autopaste)
-
-  (use-package circe-notifications
-    :ensure t
-    :after circe
-    :commands enable-circe-notifications)
 #+end_src
 
 ** diminish bullshit
