ref: new template for body measurements

--- a/org-mode-conf.org
+++ b/org-mode-conf.org
@@ -87,6 +87,8 @@ Including font lock and directories
                  "* TODO %? :blog:\n%U\n" :clock-in t :clock-resume t)
                 ("j" "Journal" entry (file+datetree "~/Documents/org/priv/diary.org")
                  "* %?\n%U\n" :clock-in t :clock-resume t)
+                ("k" "Körpermaße" entry (file+datetree "~/Documents/org/priv/measurements.org")
+                 "* %?\n%U\n")
                 ("m" "Meeting" entry (file+headline "~/Documents/org/inbox.org" "Inbox")
                  "* MEETING with %? :MEETING:\n%U" :clock-in t :clock-resume t)
                 ("c" "Phone call" entry (file+headline "~/Documents/org/inbox.org" "Inbox")
