--- a/emacs.org
+++ b/emacs.org
@@ -1265,8 +1265,8 @@ We want to be able to edit CMake files in a sane way.
   (use-package whitespace
     :diminish (whitespace-mode . "Ⓦ")
     :init
-    ;(setq whitespace-global-modes '(c-mode c++-mode ruby-mode web-mode php-mode js2-mode css-mode scss-mode elixir-mode conf-space-mode))
-    ;(global-whitespace-mode t)
+    (setq whitespace-global-modes '(c-mode c++-mode ruby-mode web-mode php-mode js2-mode css-mode scss-mode elixir-mode conf-space-mode shell-script-mode))
+    (global-whitespace-mode t)
     (setq show-trailing-whitespace t)
     (setq whitespace-line-column 120)
 
@@ -1280,28 +1280,28 @@ We want to be able to edit CMake files in a sane way.
             (newline-mark ?\n    [?\u21A9 ?\n] [?\> ?\n])
             (tab-mark 9 [187 9] [92 9])))
 
-    (setq ck/spaces-color "gray92")
-    (setq ck/spaces-err-color "firebrick"))
+    (setq ck/spaces-color "gray23")
+    (setq ck/spaces-err-color "firebrick")
 
-    ;; (set-face-attribute 'whitespace-space nil
-    ;;                     :background nil
-    ;;                     :foreground ck/spaces-color)
-    ;; (set-face-attribute 'whitespace-tab nil
-    ;;                     :background nil
-    ;;                     :foreground ck/spaces-color)
-    ;; (set-face-attribute 'whitespace-newline nil
-    ;;                     :background nil
-    ;;                     :foreground ck/spaces-color)
-    ;; (set-face-attribute 'whitespace-empty nil
-    ;;                     :background nil
-    ;;                     :foreground ck/spaces-err-color)
-    ;; (set-face-attribute 'whitespace-line nil
-    ;;                     :background nil
-    ;;                     :foreground ck/spaces-err-color)
-    ;; (set-face-attribute 'whitespace-trailing nil
-    ;;                     :background "khaki1"
-    ;;                     :foreground ck/spaces-err-color)
-    ;(setq whitespace-style '(face trailing)))
+    (set-face-attribute 'whitespace-space nil
+                        :background nil
+                        :foreground ck/spaces-color)
+    (set-face-attribute 'whitespace-tab nil
+                        :background nil
+                        :foreground ck/spaces-color)
+    (set-face-attribute 'whitespace-newline nil
+                        :background nil
+                        :foreground ck/spaces-color)
+    (set-face-attribute 'whitespace-empty nil
+                        :background nil
+                        :foreground ck/spaces-err-color)
+    (set-face-attribute 'whitespace-line nil
+                        :background nil
+                        :foreground ck/spaces-err-color)
+    (set-face-attribute 'whitespace-trailing nil
+                        :background "#e0211d"
+                        :foreground "#dc752f"))
+    ;; (setq whitespace-style '(face trailing)))
 #+end_src
 
 ** YAML support
