fix: we're using global-whitespace-mode, so diminish the right thing

--- a/emacs.org
+++ b/emacs.org
@@ -1263,7 +1263,7 @@ We want to be able to edit CMake files in a sane way.
 
 #+begin_src emacs-lisp
   (use-package whitespace
-    :diminish (whitespace-mode . "Ⓦ")
+    :diminish (global-whitespace-mode . "Ⓦ")
     :init
     (setq whitespace-global-modes '(c-mode c++-mode ruby-mode web-mode php-mode js2-mode css-mode scss-mode elixir-mode conf-space-mode shell-script-mode))
     (global-whitespace-mode t)
