--- a/emacs.org
+++ b/emacs.org
@@ -1278,10 +1278,10 @@ We want to be able to edit CMake files in a sane way.
                                   indentation empty space-after-tab space-mark tab-mark newline-mark))
 
     (setq whitespace-display-mappings
-          '((space-mark 32 [183] [46])
+          '(;(space-mark 32 [183] [46])
             (space-mark 160 [164] [95])
             ;(newline-mark 10 [36 10])
-            (newline-mark ?\n    [?\u21A9 ?\n] [?\> ?\n])
+            ;(newline-mark ?\n    [?\u21A9 ?\n] [?\> ?\n])
             (tab-mark 9 [187 9] [92 9])))
 
     (setq ck/spaces-color "gray23")
